--- a/projects.html
+++ b/projects.html
@@ -218,10 +218,10 @@
                     <div class="text-container">
                         <div class="image-container">
                             <a href="">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/CovUniWk1Gamejam/Menu.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        <p><strong>For</strong>: Coventry Uni, <strong>Project</strong>: Automita - 2022 Week 1 Gamejam<br>
                         </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
