--- a/projects.html
+++ b/projects.html
@@ -217,7 +217,7 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="">
+                            <a href="Automita.html">
                                 <img class="img-fluid" src="images/Projects/CovUniWk1Gamejam/Menu.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
