--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <center><h2 class="mb-3">Personal Projects</h2>
+                    <center><h2 class="mb-3">Personal Game Projects</h2>
                     </center>
                     
                     
@@ -163,6 +163,38 @@
                             </a>
                         </div> <!-- end of image-container -->
                         <p><strong>For:</strong> &nbsp;Airship Interactive Jam, <strong>Project:</strong> &nbsp;"Growth" theme - Procedural tree generation</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="PlaytonicGIGJam.html">
+                                <img class="img-fluid" src="images/Projects/Playtonic/play2.PNG" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>For:</strong>  Playtonic/Grads in Games jam, <strong>Project:&nbsp;</strong> Yooka-Laylee inspired project</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+			<div class="row">
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="PlanetDefence.html">
+                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>For: </strong>  <strong>Project: </strong></p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="ProctreeAirship.html">
+                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>For: </strong><strong>Project:</strong></p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
