Redesigned layout and videos

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>About Me</h1>
+                    <h1>About Me - Stuart Heath</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -88,19 +88,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
-                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
+					<p>Hi There!</p>
+					<p> I'm Stuart, a mature student at Coventry University studying Games technology.</p>
+					<p> Within this site, you will find a number of projects that I've worked on. Although if you were to browse my Github, you would find a lot more little prototypes as I love nothing more than trying new things out and learning as much as possible.</p>
+				  <p>Although my Games career is so far limited to my University time, I have, and continue to work on, 3rd party projects where possible and taking part in game jams, both solo and within teams.&nbsp;&nbsp;</p>
+				  <p>Before my games journey, I was an electrical project engineer for automotive manufactuers and suppliers, delivering a  number of small, medium and large projects over 10 years.</p>
+				  <p>For the last 5 years, I've been the co-owner and director of a small chocolate company, selling B2B and B2C.</p>
+				  <p>Aside from all that, I enjoy playing games (obviously!), working on my car (A lovely Land Rover 90) and when possible, camping!&nbsp; &nbsp; &nbsp; &nbsp;</p>
+							<div class="container-fluid">
 
-                    <h2 class="mb-3">Lorem ipsum dolor sit amet.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
-					<div class="row">
-			
-	
-	
-	
-					
-                </div> 
+    <div class="row justify-content-center">	
+<p><img src ="images/Camping.jpg" alt="Camping" width = "400" height = "400"></p>
+	</div>
+  </div>
+					<div class="container-fluid">
+
+    <div class="row justify-content-center">
+		<div class="row">   <p>If you've made it this far, thanks! Have some cat pictures (Peanut &amp; Pickle)</p></div>
+		                 
+<div class="row"> 
+  <div class="column">
+<p><img src ="images/Pickle.jpg" alt="Pickle cat"width = "400" height = "400"></p>
+  </div>
+  <div class="column">
+					<p><img src ="images/Peanut.jpg" alt="Peanut Cat"width = "400" height = "400"></p>
+  </div>
+  </div>
+</div>
+</div>
+
+<div class="row">
+  
+  
+  
+  
+  
+</div> 
 					<!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
