--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                      <h1 class="h1-large">Stuart Heath</h1>
+                      <h1 class="h1-large">Stuart Heath - Portfolio</h1>
                         <h1 class="h1-large">Aspiring Games Programmer&nbsp;&nbsp;</h1>
 <a class="btn-solid-lg page-scroll" href="projects.html">Projects</a>
                         <a class="btn-outline-lg page-scroll" href="about.html"></i>About me</a>
