Added links to about

--- a/about.html
+++ b/about.html
@@ -90,10 +90,11 @@
                 <div class="col-xl-10 offset-xl-1">
 					<p>Hi There!</p>
 					<p> I'm Stuart, a mature student at Coventry University studying Games technology.</p>
-					<p> Within this site, you will find a number of projects that I've worked on. Although if you were to browse my Github, you would find a lot more little prototypes as I love nothing more than trying new things out and learning as much as possible.</p>
+					<p> Within this site, you will find a number of projects that I've worked on. Although if you were to browse my 
+						<a href="https://github.com/pkplonker">Github</a> , you would find a lot more little prototypes as I love nothing more than trying new things out and learning as much as possible.</p>
 				  <p>Although my Games career is so far limited to my University time, I have, and continue to work on, 3rd party projects where possible and taking part in game jams, both solo and within teams.&nbsp;&nbsp;</p>
-				  <p>Before my games journey, I was an electrical project engineer for automotive manufactuers and suppliers, delivering a  number of small, medium and large projects over 10 years.</p>
-				  <p>For the last 5 years, I've been the co-owner and director of a small chocolate company, selling B2B and B2C.</p>
+				  <p>Before my games journey, I was an <a href="https://www.linkedin.com/in/stuartheath1/">electrical project engineer</a> for automotive manufactuers and suppliers, delivering a  number of small, medium and large projects over 10 years.</p>
+				  <p>For the last 5 years, I've been the co-owner and director of a small chocolate company, selling B2B and B2C - <a href="https://www.theslabb.co.uk/">TheSlabb.co.uk</a></p>
 				  <p>Aside from all that, I enjoy playing games (obviously!), working on my car (A lovely Land Rover 90) and when possible, camping!&nbsp; &nbsp; &nbsp; &nbsp;</p>
 							<div class="container-fluid">
 
