--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
             <div class="row">
 				<div class="col">
 			
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/KMI04nONUxw?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/KMI04nONUxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<div class="col">
 				<a href="hibernatinghedgehogs.html"> <h5>Hibernating Hedgehogs - Grads In Games - Rising Star finalist 2021 (C# Unity)</h5>
@@ -193,7 +193,7 @@
 			
             <div class="row">
 				<div class="col">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/YKKXffrNQWk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/YKKXffrNQWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<div class="col">
 						              <a href="PlanetDefence.html"> <h5>Planet Defence - Android mobile game (C# Unity)&nbsp;</h5>
