General Improvements + GoldMiner

--- a/PlanetDefence.html
+++ b/PlanetDefence.html
@@ -115,16 +115,18 @@
 <li>Story</li>
 				<li>Unlock and progression system</li>
 				  </lu> 
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/YKKXffrNQWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				  <p></p>
 				 <a href="https://github.com/pkplonker/PlanetDefense"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>
                   <p></p>
 					
 					<iframe frameborder="0" src="https://itch.io/embed/1611845" width="552" height="167"><a href="https://stuartheath.itch.io/planet-defence">Planet Defence by Stuart Heath</a></iframe>
-			<p></p>
+						  <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
+
 			<a href='https://play.google.com/store/apps/details?id=com.Energise.PlanetDefense&hl=en_GB&gl=US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="215" 
      height="84" /></a>
 			
-						<p></p>
+						</p>
 			<p></p>
 
 			<p></p>
