--- a/projects.html
+++ b/projects.html
@@ -296,11 +296,11 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="ProctreeAirship.html">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                            <a href="GoldMiner.html">
+                                <img class="img-fluid" src="images/Projects/GoldMiner/Diggable.PNG" alt="alternative">
                             </a>
                         </div> 
-                        <p><strong>For: </strong><strong>Project:</strong></p>
+                        <p><strong>For:</strong>Personal Project <strong>Project:</strong>Gold Miner (Aussie Gold Hunters inspired procedural world)</p>
                     </div> 
                 </div> 
                 <div class="col-lg-4">
