Minor typo fixes

--- a/Automita.html
+++ b/Automita.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>The first week of any new year at Coventry University, teams are created across Games technology and games art to produce in 3-4 days, a game. This year, my team created Automita, a sci-fi themed infinite runner.</p>
+                    <p>The first week of any new year at Coventry University, teams are created across Games technology and games art to produce a game in 3-4 days. This year, my team created Automita, a sci-fi themed infinite runner.</p>
 					
 				  <p>My contributions were as follows:</p>
 <lu>
