--- a/GoldMiner.html
+++ b/GoldMiner.html
@@ -103,7 +103,7 @@
                     
                     <h2>Gold Miner Game - WIP</h2>
                     <p> An <a href="https://www.discoveryplus.com/gb/show/aussie-gold-hunters">Aussie Gold hunters</a> inspired game that is currently work in progress.</p>
-                    <p> This consists of a procedural world generation system, based on the work of <a href="https://www.youtube.com/watch?v=wbpMiKiSKm8">Sebastian Lague</a> and modified for perforamce via a combination of coroutines and threading(via async). I've also added an asynconous object spawner so that each world can be seeded and reloaded. Further to this, I've created a digable terrain that uses math, rather than looping through vertices and thus, appears to be incredible performant in my testing so far. It can also dig across the indiviual tiles. Each tiles changes per frame are calculated and performed once.</p>
+                    <p> This consists of a procedural world generation system, based on the work of <a href="https://www.youtube.com/watch?v=wbpMiKiSKm8">Sebastian Lague</a> and modified for performance via a combination of coroutines and threading(via async). I've also added an asynconous object spawner so that each world can be seeded and reloaded. Further to this, I've created a digable terrain that uses math, rather than looping through vertices and thus, appears to be incredible performant in my testing so far. It can also dig across the indiviual tiles.</p>
                     
 <p>&nbsp;Produced in Unity/C#&nbsp;</p>
 					<lu>
