--- a/ProctreeAirship.html
+++ b/ProctreeAirship.html
@@ -104,12 +104,12 @@
                   <p class="mb-5">My submission was a&nbsp; procedural tree mesh generation system using stochastic L-System fractals. It utilises a rule based system developed by&nbsp;<a href"https://en.wikipedia.org/wiki/L-system#Origins">Aristid Lindenmayer</a>. &nbsp; &nbsp; &nbsp;&nbsp;</p>
                     <p class="mb-5">Key functionality implemented:</p>
 <lu>
-		<li>Runtime mesh generation and using L-system rule strings</li>
+		<li>Runtime mesh generation  using L-system rule strings</li>
 						<li>Drag and drop rule implemention</li>
 						<li>Custom editior</li>
 	<li>Placement of leaves and fruits</li>
 						<li>Saving mesh</li>
-						  <li>Randomised elements for growth size, length, color and chance of leaves/fruits.&nbsp;</li>
+						  <li>Randomised elements for growth size, length, color,&nbsp; chance of leaves/fruits.&nbsp;</li>
 	
 				  </lu> 
 					
