--- a/PlaytonicGIGJam.html
+++ b/PlaytonicGIGJam.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>Produced for a game jam, as a collaboration  between Playtonic and grads in games. The idea of the jam was to create a&nbsp;Yooka-Laylee inspired piece.&nbsp;</p>
+                    <p>Produced for a game jam, as a collaboration  between Playtonic and Grads in games. The idea of the jam was to create a&nbsp;Yooka-Laylee inspired piece.&nbsp;</p>
 					
 				  <p>I was unable to spend any real time on the project due to other commitments, however I was happy to produce the following as a working prototype of a number of features.</p>
 <lu>
@@ -112,7 +112,7 @@
 				
 				  <p> No Artwork(2D/3D or VFX) was produced by me.</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/3u9Ki0fdTT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					        <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
+		          <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
 
 				 <a href="https://github.com/pkplonker/PlaytonicGIGJam"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>
                   </p>
