--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -105,17 +105,16 @@
                     <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream.&nbsp;</p>
                   <p>&nbsp;Produced in Unity/C#&nbsp;</p>
 					<lu>
-					  <li>Created an asynchronous IRC connection/management system with websockets with IRC chat parser as a stand alone package that I utilised as a Git submodule within the project</li>
-						<li>Character creation, spawning and movement</li>
-						<li>Fighting and experience system with lootbox bonus exp</li>
-						<li>JSON saving of all character data</li>
-												<li>Menu system</li>
-
-						<li>Editor functionality</li>
-					  <ul>
+					  <li>Created an asynchronous IRC connection/management system with websockets with IRC chat parser as a stand alone package that I utilised as a Git submodule within the project.</li>
+						<li>Character creation, spawning and movement.</li>
+						<li>Fighting and experience system with lootbox bonus exp.</li>
+						<li>JSON saving of all character data.</li>
+						<li>Menu system.</li>
+						<li>Editor functionality.</li>
+					  
 						  <li> <a href=" https://pkplonker.github.io/TwitchGame">Supporting documentation</a> </li>
 						  <li>Working with users to fix post release issues.&nbsp;&nbsp;</li>
-					  </ul>
+					 
                     </lu>
 					</br>
 			      <p>In this project, no 2D or 3D art was produced by me.</p>
