--- a/PlanetDefence.html
+++ b/PlanetDefence.html
@@ -101,7 +101,7 @@
                 <div class="col-xl-10 offset-xl-1">
                     <p>My target for the  summer following the first year at university was to complete a game that I could release on mobile, specifically to the Android Play Store.</p>
                     <p class="mb-5">The game was produced over a few weeks and delivers a feature complete game.</p>
-                  <p class="mb-5">Although it still requires clean up,&nbsp; some polish and more levels. I'm glad to be able to release my first game.</p>
+                  <p class="mb-5">Although it still requires clean up and polisg, I'm glad to be able to release my first game.</p>
                     <p class="mb-5">Key functionality implemented:</p>
 <lu>
 <li>Wave spawning</li>
