New videos + more content

--- a/PlanetDefence.html
+++ b/PlanetDefence.html
@@ -99,9 +99,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>My target for the  summer following the first year at university was to complete a game that I could release on mobile, specifically to the Android Play Store.</p>
-                    <p class="mb-5">The game was produced over a few weeks and delivers a feature complete game.</p>
-                  <p class="mb-5">Although it still requires clean up and polisg, I'm glad to be able to release my first game.</p>
+                     <p>My target for the  summer following the first year at university was to complete a game that I could release on mobile, specifically to the Android Play Store.
+				                        The game was produced over a few weeks and delivers a feature complete game.</p>
+				                      <p>Although not a particulaly technically challenging project. I used this project as a test bed to further develop my personal tools package. Something that I intend to maintain and develop. Predomently a collection of editor modifications and static extensions that can be used across multiple projects. I also took the oppurtunity to develop a number of editor extensions and debug tools to assist development. Such as data view panels, autoplay and CSV data loading.</p>
+<p >It still requires clean up and polish.&nbsp; I'm glad to be able to release my first game.</p>
                     <p class="mb-5">Key functionality implemented:</p>
 <lu>
 <li>Wave spawning</li>
