--- a/PlaytonicGIGJam.html
+++ b/PlaytonicGIGJam.html
@@ -101,7 +101,7 @@
                 <div class="col-xl-10 offset-xl-1">
                     <p>Produced for a game jam, as a collaboration  between Playtonic and Grads in games. The idea of the jam was to create a&nbsp;Yooka-Laylee inspired piece.&nbsp;</p>
 					
-				  <p>I was unable to spend any real time on the project due to other commitments, however I was happy to produce the following as a working prototype of a number of features.</p>
+				  <p>I was unable to spend any real time on the project due to other commitments, however I was happy to produce the following as a working prototype over a few evenings.</p>
 <lu>
 		<li>Player rigidbody controller with animation</li>
 	<li>Health and stamina system with UI </li>
@@ -111,7 +111,7 @@
 				<p></p>
 				
 				  <p> No Artwork(2D/3D or VFX) was produced by me.</p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/3u9Ki0fdTT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/HkHxkwGVX4w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		          <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
 
 				 <a href="https://github.com/pkplonker/PlaytonicGIGJam"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>
