--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -102,7 +102,9 @@
                 <div class="col-xl-10 offset-xl-1">
                     
                     <h2>Twitch Overlay Game</h2>
-                    <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream.&nbsp;</p>
+                     <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream. Produced in Unit, it&nbsp; allows each chatter in the stream to join a character into the game, control and level it up through combat and interaction.</p>
+                    <p>The main issue I faced was the core interface to Twitch IRC. Maintaining connection via keepalive and parsing each message to extract the required information. Luckily, Twitch has very good documentation for their API, so once I got to grips with that, the project went much smoother.&nbsp; &nbsp; &nbsp;&nbsp;</p>
+<p>Since release, I've been engaging with users to ensure that any issues are resolved and feedback considered for ongoing releases.&nbsp;&nbsp;</p>
                   <p>&nbsp;Produced in Unity/C#&nbsp;</p>
 					<lu>
 					  <li>Created an asynchronous IRC connection/management system with websockets with IRC chat parser as a stand alone package that I utilised as a Git submodule within the project.</li>
@@ -128,7 +130,7 @@
 
   <iframe frameborder="0" src="https://itch.io/embed/1596815?linkback=true" width="552" height="167"><a href="https://stuartheath.itch.io/twitch-fighter-overlay-game">Twitch Fighter Overlay Game by Stuart Heath</a></iframe></p>
         <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
-		 <a href="https://github.com/pkplonker/PlanetDefense"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>  
+		 <a href="https://github.com/pkplonker/TwitchGame"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>  
 		</p>
 
 					
