--- a/flipoff.html
+++ b/flipoff.html
@@ -102,8 +102,10 @@
                 <div class="col-xl-10 offset-xl-1">
                     
                     <h2>Flip Off - Global Game Jam 2021</h2>
-                  <p>This was a great experience, my first full game jam and allowed me to lead a multidisciplinary team, consisting of&nbsp; three other programmers, four artists and a sound design engineer.&nbsp;</p>
-                    <p>&nbsp; &nbsp;</p>
+                  <p>This was a great experience, my first full game jam and allowed me to lead a multidisciplinary team, consisting of; three other programmers, four artists and a sound design engineer.</p>
+                  <p>It was great working with a team of likeminded people, with different skill sets and abilities. I worked hard initially ensuring that everyone had a voice and was able to share their thoughts on the theme. Once we had the oppurtunity to share, the first hard part was agreeing what we would do. It was important to try and keep scope managable so I was sure to record all of out decisions down as critical/nice to have.</p>
+                  <p>The main hurdle was working with the artists to get game ready assets. Unfortunenty, this was not something that was a given. However, after working with them and explaining what was required from the art that was produced, we developed a workflow that allowed us to more easily get their work into the final project.</p>
+<p>Unfortunently we didn't leave ourselves suitable time for putting the level together and as such the level created wasn't completable and remained with a number of issues that I wished we had enough time to resolve. I did however learn from this as a critical consideration for future jams.&nbsp; &nbsp;</p>
 <p>I created the following systems:</p>
 					<lu>
 						<li>Editor tools</li>
@@ -114,8 +116,11 @@
 					</lu>
 					</br>
 					
-                  <p>This project is unmodified since submission</p>
-                          <a href="https://github.coventry.ac.uk/heaths8/Formula-Student-AI-Life-Racing-GPS-Log-Parser"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:20%"></a>
+                  <p>This project is unmodified since submission.</p>
+			  			 			  <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
+
+                          <a href="https://github.com/VerzatileDev/Flip-Off"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:20%"></a>
+			  </p>
 			 			  <p style="margin-left: 0em;padding: 0 7em 2em 0;border-width: 0; border-style:solid;">
 
                         <a href=" https://globalgamejam.org/2022/games/flip-3">Play Here</a>
