Fixed videos and reordered github

--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -121,7 +121,9 @@
 					</br>
 			      <p>In this project, no 2D or 3D art was produced by me.</p>
 					</br>
-	</br>
+	
+		
+<p> <a href="https://github.com/pkplonker/TwitchGame"><img src="images/Icons/GitHub_Logo.png" alt="Github" style="width:20%; height:10%"></a>  </p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/qF04HB2OTCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/bEY4WjRSxc8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
