--- a/projects.html
+++ b/projects.html
@@ -301,13 +301,13 @@
                 </div> 
                 <div class="col-lg-4">
                     <div class="text-container">
-                        <!--<div class="image-container">
-                            <a href="">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                        <div class="image-container">
+                          <a href="halo.html">
+                            <img class="img-fluid" src="images/Projects/Halo/Halo2.PNG" alt="alternative">
                             </a>
                         </div> 
-                        <p><strong>For:</strong> tbc, <strong>Project:&nbsp;</strong> tbc</p>
-                    </div> -->
+                        <p><strong>For:</strong> &nbsp;Coventry University Marketing Department&nbsp;&nbsp; <strong>Project:&nbsp;</strong> Halo Coffee Educational Marketing Game - Demo</p>
+                    </div> 
                 </div> 
             </div> 
         </div> 
