--- a/cv.html
+++ b/cv.html
@@ -89,12 +89,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
-                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
+     <a href="Stuart Heath CV.pdf">PDF Download</a>
+					     <a href="Stuart Heath CV.Docx">Docx Download</a>
 
-                    <h2 class="mb-3">Lorem ipsum dolor sit amet.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna magna. Mauris mattis pharetra dui at rutrum. Etiam ligula odio, egestas placerat urna eget, pharetra gravida neque. Vestibulum ut porttitor ligula. Proin consequat arcu eget orci sollicitudin pharetra. Morbi efficitur finibus iaculis. Etiam at leo sit amet massa mattis lacinia. Curabitur finibus lobortis porttitor.</p>
+                   <iframe src="Stuart Heath CV.pdf" width="100%" height="1000px">
 					<div class="row">
 			
 	
