--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 					<ul>
 					<li><a href="mailto:stuart@stuartheath.co">Stuart@stuartheath.co</a></li>
 					<li><a href="mailto:stuart@stuartheath.co.uk">Stuart@stuartheath.co.uk</a></li>
-					<li><a href="twitter.com/pkplonker">Twitter</a></li>
+					<li><a href="https://www.twitter.com/pkplonker">Twitter</a></li>
 						<li><a href="https://www.linkedin.com/in/stuartheath1/">Linkedin</a></li>
 
 					</ul>
