Formula Student and opengl

--- a/projects.html
+++ b/projects.html
@@ -281,11 +281,11 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="Automita.html">
-                                <img class="img-fluid" src="images/Projects/CovUniWk1Gamejam/Menu.png" alt="alternative">
+                            <a href="FormulaStudentGPSParser.html">
+                                <img class="img-fluid" src="images/Projects/GPS/FormulaStudent.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For</strong>: Coventry Uni - 2022 Week 1 GameJam&nbsp; <strong>Project</strong>: Automita&nbsp;<br>
+                        <p><strong>For</strong>: Formula Student <strong>Project</strong>: GPS Log Parser C++<br>
                         </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -310,6 +310,39 @@
                     </div> 
                 </div> 
             </div> 
+				<div class="row">
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="Automita.html">
+                                <img class="img-fluid" src="images/Projects/CovUniWk1Gamejam/Menu.png" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>For</strong>: Coventry Uni - 2022 Week 1 GameJam&nbsp; <strong>Project</strong>: Automita&nbsp;<br>
+                        </p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="OpenGL.html">
+                                <img class="img-fluid" src="images/TBC.png" alt="alternative">
+                            </a>
+                        </div> 
+                        <p><strong>For:&nbsp;</strong>University Graphics Module <strong>Project:&nbsp;</strong>OpenGL C++</p>
+                    </div> 
+                </div> 
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                         <!-- <a href="halo.html">
+                            <img class="img-fluid" src="" alt="alternative">
+                            </a>-->
+                        </div> 
+                        <!-- <p><strong>For:</strong>  <strong>Project:</strong> </p>-->
+                    </div> 
+                </div> 
+            </div>
         </div> 
     </div> 
   
