--- a/OpenGL.html
+++ b/OpenGL.html
@@ -105,7 +105,7 @@
                     <h2>OpenGL Underwater Scene(C++)&nbsp;&nbsp;</h2>
                     <p>An ongoing project in C++ to create an underwater scene in C++ which cannot be shared until it's graded</p>
                     <p>Using GL3W, GLFW and GLM to create an underwater scene, implementing GLSL shaders. Utilising VAO/VBO/IBOs to graphically represent coded and *.OBJ&nbsp; objects in a scene. Implemented Phong, Gourad, Blinn/Phong shading. Cubemaps, enviroment mapping and dynamic textures.</p>
-                    <p>As part of this project, I've taken it upon myself to implement this in a scaleable and reusable way in anticipation of the Game engine module in year 3. I've opted to&nbsp;voluntarily implement a number of design pattern, including : Game Loop, Update, Component, Flyweight, Prototype, Observe, Facade, Factory Method.&nbsp;&nbsp;</p>
+                    <p>As part of this project, I've taken it upon myself to implement this in a scaleable and reusable way in anticipation of the Game engine module in year 3. I've opted to&nbsp;voluntarily implement a number of design pattern, including : Game Loop, Update, Component, Flyweight, Prototype, Observer, Facade, Factory Method.&nbsp;&nbsp;</p>
                   <!--   <a href="https://github.coventry.ac.uk/heaths8/Formula-Student-AI-Life-Racing-GPS-Log-Parser"><img src="images/icons/GitHub_Logo.png" alt="Github" style="width:20%; height:20%"></a> -->
                         
 
