--- a/projects.html
+++ b/projects.html
@@ -155,8 +155,8 @@
 	             <a href="TwitchGame.html">
  <h5>Twitch Overlay Game (C# Unity)</h5>  
  </a> 
-                    <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream. Produced in Unit, it&nbsp; allows each chatter in the stream to join a character into the game, control and level it up through combat and interaction.</p>
-                    <p>The main issue I faced was getting to grips with working with a different API. Luckily, Twitch's documentation is very good and this was managable.Since release, I've been engaging with users to ensure that any issues are resolved and feedback considered for ongoing releases.</p>
+                    <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream. Produced in Unity, it&nbsp; allows each chatter in the stream to join a character into the game, control and level it up through combat and interaction.</p>
+                    <p>The main issue I faced was getting to grips with working with a different API. Luckily, Twitch's documentation is very good and this was managable. Since release, I've been engaging with users to ensure that any issues are resolved and feedback considered for ongoing releases.</p>
 
 
 				  <p></p>
@@ -199,7 +199,7 @@
 
 				                      <p>My target for the  summer following the first year at university was to complete a game that I could release on mobile, specifically to the Android Play Store.
 				                        The game was produced over a few weeks and delivers a feature complete game.</p>
-				                      <p>I used this project as a test bed to further develop my personal tools package. Something that I intend to maintain and develop. A collection of editor modifications and static extensions that can be used across multiple projects. I also took the oppurtunity to develop a number of editor extensions and debug tools to assist development. Such as data view panels, autoplay and CSV data loading.</p>
+				                      <p>I used this project as a test bed to further develop my personal tools package. Something that I intend to maintain and develop. A collection of editor modifications and static extensions that can be used across multiple projects. I also took the opportunity to develop a number of editor extensions and debug tools to assist development. Such as data view panels, autoplay and CSV data loading.</p>
 
 					
 				</div>
