--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -102,7 +102,7 @@
                 <div class="col-xl-10 offset-xl-1">
                     
                     <h2>Twitch Overlay Game</h2>
-                     <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream. Produced in Unit, it&nbsp; allows each chatter in the stream to join a character into the game, control and level it up through combat and interaction.</p>
+                     <p> Following a conversation with a streamer friend, I offered to make an interactive overlay game that his viewers could view and play with through their stream. Produced in Unity, it&nbsp; allows each chatter in the stream to join a character into the game, control and level it up through combat and interaction.</p>
                     <p>The main issue I faced was the core interface to Twitch IRC. Maintaining connection via keepalive and parsing each message to extract the required information. Luckily, Twitch has very good documentation for their API, so once I got to grips with that, the project went much smoother.&nbsp; &nbsp; &nbsp;&nbsp;</p>
 <p>Since release, I've been engaging with users to ensure that any issues are resolved and feedback considered for ongoing releases.&nbsp;&nbsp;</p>
                   <p>&nbsp;Produced in Unity/C#&nbsp;</p>
